Some general improvements